[gd_scene load_steps=2 format=3 uid="uid://link_tablet"]

[ext_resource type="Script" path="res://src/parent_mode/link_tablet.gd" id="1_link"]

[node name="LinkTablet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_link")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.15, 1)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Link Hero Tablet"
horizontal_alignment = 1

[node name="CodeContainer" type="VBoxContainer" parent="Center/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CodeLabel" type="Label" parent="Center/VBox/CodeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 72
text = "------"
horizontal_alignment = 1

[node name="Helper" type="Label" parent="Center/VBox/CodeContainer"]
layout_mode = 2
text = "Enter this code on the Hero device"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatusLabel" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Preparing..."
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "Expires in: 5:00"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
text = "< Back"
flat = true
